# MeetGrid-Backend

./: .env.example  .gitignore  README.md  app.py  compose.yml  config.yaml  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: docs.py  topic.py
app/core/: __init__.py  db.py  di.py  exceptions.py  grid.py  settings.py
app/db/: redis.py
app/models/: __init__.py  interval.py  stats.py  topic.py
app/service/: __init__.py  links.py  topic_stats.py  topics.py
app/services/: __init__.py  topic_stats.py
tests/: conftest.py
tests/e2e/: test_topic_api.py  util.py
tests/integration/: conftest.py  test_redis.py
tests/unit/: test_topic_stats.py  util.py
