[project]
name = "meetgrid-backend"
version = "0.1.0"
description = "MeetGrid is "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "redis>=7.0.1",
    "pytest>=8.3.2",
    "pydantic-config>=0.3.0",
    "pytest-asyncio>=0.23.8",
    "inject>=5.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "testcontainers[redis]>=4.13.3",
]
